deploy: 49a834c16af7c2cf97b873aa63aa0692b63311c7

--- a/developers/03-docker-development.html
+++ b/developers/03-docker-development.html
@@ -150,6 +150,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="docker-development"><a class="header" href="#docker-development">Docker Development</a></h1>
+<blockquote>
+<p>You'll need to complete <a href="./01-prepare.html">prepare</a> before you do this.</p>
+</blockquote>
 <h2 id="dependencies"><a class="header" href="#dependencies">Dependencies</a></h2>
 <p>To use Docker, you only need to install Docker and Docker Compose.</p>
 <pre><code class="language-bash"># Arch-based distro
