--- a/developers/02-local-development.html
+++ b/developers/02-local-development.html
@@ -150,6 +150,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="local-development"><a class="header" href="#local-development">Local Development</a></h1>
+<blockquote>
+<p>You'll need to complete <a href="./01-prepare.html">prepare</a> before you do this.</p>
+</blockquote>
 <h2 id="dependencies"><a class="header" href="#dependencies">Dependencies</a></h2>
 <p>To develop Hatsu, you should first <a href="https://www.rust-lang.org/tools/install">install Rust</a> and some dependencies.</p>
 <pre><code class="language-bash"># Arch-based distro
