deploy: f1a2e55a42d9ef4e133b17b7bcaa0abec9a323eb

--- a/print.html
+++ b/print.html
@@ -326,7 +326,7 @@ which caches dependencies to avoid duplicate build dependencies.</p>
 <h2 id="items"><a class="header" href="#items">items</a></h2>
 <p>The following applies to the <a href="https://www.jsonfeed.org/version/1.1/#items-a-name-items-a">JSON Feed Item</a>.</p>
 <ul>
-<li><code>about</code> (optional but strongly recommended, string) is the URL used to introduce this extension to humans. should be <a href="https://github.com/importantimport/hatsu/issues/1">https://github.com/importantimport/hatsu/issues/1</a> .</li>
+<li><code>about</code> (optional, string) is the URL used to introduce this extension to humans. should be <a href="https://github.com/importantimport/hatsu/issues/1">https://github.com/importantimport/hatsu/issues/1</a> .</li>
 </ul>
 
                     </main>
